--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>p5.js 작품 모음</title>
-    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard/dist/web/static/pretendard.css">
+
     <style>
+        body {
+            font-family: "Pretendard", sans-serif;
+        }
+
         #projects {
             display: grid;
-            grid-template-columns: 1fr 1fr; /* 2열 */
-            gap: 20px; /* 칸 사이 간격 */
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
             max-width: 700px;
             margin: 0 auto;
         }
