--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>p5.js 작품 모음</title>
+    <title>수현의 작품 모음</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard/dist/web/static/pretendard.css">
 
@@ -38,8 +38,8 @@
 
 <body>
     <header>
-        <h1>나의 p5.js 작품</h1>
-        <p>아래 링크를 클릭하여 p5.js로 만든 다양한 프로그램을 감상하세요.</p>
+        <h1>수현의 p5.js 작품</h1>
+        <p>아래 링크를 클릭하여 p5.js로 만든 다양한 프로그램을 감상하세요^_^</p>
     </header>
 
     <section id="projects">
