--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <body>
     <header>
         <h1>수현의 p5.js 작품</h1>
-        <p>아래 링크를 클릭하여 p5.js로 만든 다양한 프로그램을 감상하세요^_^</p>
+        <p>아래 링크를 클릭하여 p5.js로 만든 다양한 프로그램을 감상하세욥^_^</p>
     </header>
 
     <section id="projects">
